<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="menu_item_title_about">Info</string>
    <string name="menu_item_title_add_to_calendar">Add to calendar</string>
    <string name="menu_item_title_alarms">Alarms</string>
    <string name="menu_item_title_close_session_details">Close session details</string>
    <string name="menu_item_title_flag_as_favorite">Add to favorites</string>
    <string name="menu_item_title_unflag_as_favorite">Remove from favorites</string>
    <string name="menu_item_title_delete_favorite">Delete</string>
    <string name="menu_item_title_set_alarm">Set alarm</string>
    <string name="menu_item_title_delete_alarm">Clear alarm</string>
    <string name="menu_item_title_delete_all">Delete all</string>
    <string name="menu_item_title_favorites">Favorites</string>
    <string name="menu_item_title_feedback">Feedback</string>
    <string name="menu_item_title_navigate">Navigate</string>
    <string name="menu_item_title_refresh">Refresh</string>
    <string name="menu_item_title_schedule_changes" translatable="false">@string/schedule_changes</string>
    <string name="menu_item_title_search" translatable="false">@string/search_title</string>
    <string name="menu_item_title_settings" translatable="false">@string/settings</string>
    <string name="menu_item_title_share_session">Share session</string>
    <string name="menu_item_title_share_favorites">Share favorites</string>
    <string name="menu_item_title_share_session_text">as text</string>
    <string name="menu_item_title_share_session_json">as JSON (for Chaosflix)</string>
    <string name="share_as_text">Share as text</string>
    <string name="share_as_json">Share as JSON (for Chaosflix)</string>
    <string name="OK">OK</string>
    <string name="certificate_error_message">
        Failed to establish secure connection.\n
        (<xliff:g example="Unknown Error" id="error">%s</xliff:g>)
    </string>
    <string name="certificate_error_title">Certificate could not be added.</string>
    <string name="dlg_err_connection_failed">Connection failure</string>
    <string name="dlg_err_failed_unknown_host">Unknown address:\n<xliff:g example="http://example.com" id="url">%s</xliff:g></string>
    <string name="dlg_err_failed_wrong_http_credentials">Invalid HTTP Authentication</string>
    <string name="dlg_err_failed_timeout">Server doesn\'t respond (Timeout).</string>
    <string name="dlg_err_failed_connect_failure">Unknown connection failure</string>
    <string name="dlg_err_failed_not_found">Invalid schedule URL</string>
    <string name="dlg_err_failed_parse_failure">Couldn\'t parse response</string>
    <string name="dlg_err_failed_http_cleartext_not_permitted">HTTP is not allowed. Please use HTTPS.</string>
    <string name="dlg_err_schedule_data">Schedule data error</string>
    <string name="dlg_err_schedule_data_empty">
        Nothing to display. The schedule with version \"<xliff:g example="0.99" id="version">%s</xliff:g>\"
        does not contain any session.
    </string>
    <string name="dlg_err_schedule_data_empty_without_version">
        Nothing to display. The schedule does not contain any session.
    </string>
    <string name="uptodate">Schedule is up to date.</string>
    <string name="navigate_back_content_description">Back</string>
    <string name="progress_loading_data">Get schedule &#8230;</string>
    <string name="progress_processing_data">Processing schedule &#8230;</string>
    <string name="day">Day</string>
    <string name="fahrplan">Schedule</string>
    <string name="schedule_generated_by">Schedule generated by: <xliff:g example="pretalx" id="name">%1$s</xliff:g>, <xliff:g example="2024.1.0" id="version">%2$s</xliff:g></string>
    <string name="schedule_no_schedule_data_title">No schedule to display yet</string>
    <string name="schedule_no_schedule_data_subtitle">Please come back later</string>
    <string name="appVersion">App Version <xliff:g example="1.40.2" id="appVersion">%s</xliff:g></string>
    <string name="schedule_updated_to">
        Updated to <xliff:g example="Mildenberg 2018-01-16 16:50" id="version">%s</xliff:g>
    </string>
    <string name="schedule_updated">
        The schedule has been updated.
    </string>
    <string name="settings">Settings</string>
    <string name="session_details_screen_name">Details</string>
    <string name="session_details_session_id" translatable="false">
        ID: <xliff:g example="5001a" id="id">%s</xliff:g>
    </string>
    <string name="session_details_section_title_track">Subject area</string>
    <string name="session_details_section_title_session_online">Event online</string>
    <string name="session_details_section_title_links">Links</string>
    <string name="session_details_section_title_identifiers">Identifiers</string>
    <string name="choose_alarm_time">Choose alarm time</string>
    <string name="reminders">Alarms</string>
    <string name="usage">Note:\n\nLong-press on a session to set an alarm.</string>
    <string name="about_libraries_statement">
        This application uses the following libraries: <xliff:g example="Kotlin, Espresso" id="libs">%s</xliff:g>
    </string>
    <string name="about_libraries_names" translatable="false">
		Kotlin, Google AndroidX, Jetpack Compose, BetterLinkMovementMethod,
		Email Intent Builder, Engelsystem, Espresso, HTML Converter for Compose Multiplatform,
		Kotlin Multiplatform Markdown Renderer, Material Components, Moshi, OkHttp,
		Retrofit, Room states, Schedule, SnackEngage, ThreeTenBp, TraceDroid
	</string>
    <string name="about_data_privacy_statement_german">Data privacy statement (German)</string>
    <string name="about_f_droid_listing">F-Droid listing</string>
    <string name="about_google_play_listing">Google Play listing</string>
    <string name="about_issues_or_feature_requests">Issues or feature requests</string>
    <string name="about_source_code">Source code</string>
    <string name="about_translation_platform">Translation platform</string>
    <string name="copyright_notes" translatable="false">
        Copyright 2013-2026 johnjohndoe.
        \nCopyright 2011-2015 Daniel Dorau.
        \n\nContributions from 0x5ubt13, Adriano Pereira Junior, Akarsh Seggemu, Александр Рознятовский, aligoush, Andrea Marziali, Andreas Wirth, Andrulko, Andy Scherzinger, Andreas Schildbach, Animesh Verma, bashtian, bjoernb, Björn Olsson Jarl, burned42, ButterflyOfFire, cacarrara, Caio Volpato, Chase, cketti, codingcatgirl, Dominik Stadler, e4ch, entropynil, erebion, ideadapt, isi_ko404, IsoLinearCHiP, Italo Vignoli, Jasper van der Graaf, Joergi, Julius Vitkauskas, koelnkalkverbot, kpc21, Larissa Yasin, lepawa, ligi, lucadelu, Luis Azcuaga, María Arias de Reyna, Mateus Baptista, Matthias Geisler, Matthias Hunstock, Matthias Mair, MichaelRocks, Miguel Beltran, mtpa, Muha Aliss, nautilusx, Nghiem Xuan Hien, NiciDieNase, Noemis, NWuensche, Oguz Yuksel, Omicron, ozgurbaykal, Poschi, Qwertele, Róbert Papp, Robin Janssens, rotrot, Sebastian Zabel, Sjors van Mierlo, Smarzaro, Stefan Medack, SubOptimal, Su Jade, taseret, tct123, Teeranai.P, Torsten Grote, Victor Herasme, Vladimir Alabov, Yanicka, zadintuvas.
        \n\nPortions copyright 2008-2011 The K-9 Dog Walkers and 2006-2013 the Android Open Source Project.
    </string>
    <string name="today">today</string>
    <string name="schedule_parsing_error_generic">Unknown error while parsing schedule</string>
    <string name="schedule_parsing_error_with_version">Parsing error for schedule version <xliff:g example="0.99a" id="scheduleVersion">%s</xliff:g></string>
    <string name="engelsystem_shifts_parsing_error_generic">Unknown error while parsing <xliff:g example="Engelsystem" id="engelsystemAlias">%s</xliff:g> shifts</string>
    <string name="engelsystem_shifts_parsing_error_forbidden">Invalid API key for <xliff:g example="Engelsystem" id="engelsystemAlias">%s</xliff:g> shifts</string>
    <string name="engelsystem_shifts_parsing_error_not_found">Wrong URL for <xliff:g example="Engelsystem" id="engelsystemAlias">%s</xliff:g> shifts</string>
    <string name="add_to_calendar_failed">Adding session to calendar failed.</string>
    <string name="schedule_changes_no_changes_title">No schedule changes</string>
    <string name="schedule_changes_no_changes_subtitle">The app regularly checks for updates</string>
    <string name="favorites_no_favorites_title">No favorite sessions</string>
    <string name="favorites_no_favorites_subtitle">Tap on the star in the menu bar to set a favorite</string>
    <string name="schedule_changes">Schedule changes</string>
    <string name="schedule_changes_statistic_title">Schedule update</string>
    <string name="schedule_changes_statistic_update_to">Updated to schedule version: <xliff:g example="1.42.0" id="scheduleVersion">%s</xliff:g></string>
    <string name="schedule_changes_statistic_new">New</string>
    <string name="schedule_changes_statistic_new_content_description">New sessions: <xliff:g example="60" id="count">%d</xliff:g></string>
    <string name="schedule_changes_statistic_changed">Changed</string>
    <string name="schedule_changes_statistic_changed_content_description">Changed sessions: <xliff:g example="20" id="count">%d</xliff:g></string>
    <string name="schedule_changes_statistic_canceled">Canceled</string>
    <string name="schedule_changes_statistic_canceled_content_description">Canceled sessions: <xliff:g example="10" id="count">%d</xliff:g></string>
    <string name="schedule_changes_statistic_later">Later</string>
    <string name="schedule_changes_statistic_browse">Browse</string>
    <string name="schedule_changes_statistic_total_sessions">Total number of sessions: <xliff:g example="100" id="totalSessions">%d</xliff:g></string>
    <string name="dash" translatable="false"><xliff:g id="dash">—</xliff:g></string>
    <string name="development_settings">Development</string>
    <string name="general_settings">General</string>
    <string name="favorites_screen_default_title">Favorites</string>
    <plurals name="favorites_screen_title">
        <item quantity="one"><xliff:g example="1" id="count">%d</xliff:g> favorite</item>
        <item quantity="other"><xliff:g example="3" id="count">%d</xliff:g> favorites</item>
    </plurals>
    <string name="choose_to_delete">Select sessions</string>
    <string name="day_separator">Day <xliff:g example="2" id="day_of_congress">%1$d</xliff:g> - <xliff:g example="12/29/14" id="date_of_congress_day">%2$s</xliff:g></string>
    <string name="day_separator_content_description">Day <xliff:g example="2" id="day_of_congress">%1$d</xliff:g>, <xliff:g example="December 29, 2014" id="date_of_congress_day">%2$s</xliff:g></string>
    <string name="dlg_delete_all_favorites">Delete all favorites?</string>
    <string name="dlg_delete_all_favorites_delete_all">Delete all</string>
    <string name="share_error_activity_not_found">No fitting app installed.</string>
    <string name="build_info_time">
        Build time: <xliff:g example="2015-12-27T13:42Z" id="build_time">%s</xliff:g>
    </string>
    <string name="modified_at">
        Modification time: <xliff:g example="2015-12-26T23:24Z" id="modification_time">%s</xliff:g>
    </string>
    <string name="build_info_version_code">
        Version code: <xliff:g example="42" id="version_code">%s</xliff:g>
    </string>
    <string name="build_info_hash">
        Version hash: <xliff:g example="e1f2g3h-dirty" id="build_hash">%s</xliff:g>
    </string>
    <string name="app_disclaimer">
        This application is based on the source code of the &#8220;EventFahrplan&#8221; app.
        Visitors of the annual congress and camp hosted by the Chaos Computer Club
        use the app to keep track of the event program.
    </string>
    <string name="snack_engage_rate_title">Everything fine?</string>
    <string name="snack_engage_rate_action">Rate the app</string>
</resources>