<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/about_window_background">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/about_padding_horizontal"
        android:paddingTop="@dimen/about_padding_top"
        android:paddingBottom="@dimen/about_padding_bottom">

        <ImageView
            style="@style/AboutSection.Logo"
            android:contentDescription="@string/about_logo_content_description"
            app:srcCompat="@drawable/dialog_logo" />

        <TextView
            android:id="@+id/about_session_title_view"
            style="@style/AboutSection.Title"
            tools:text="33. Chaos Communication Congress" />

        <TextView
            android:id="@+id/about_session_subtitle_view"
            style="@style/AboutSection.Subtitle"
            tools:text="Works for me" />

        <TextView
            android:id="@+id/about_conference_location_view"
            style="@style/AboutSection.EventInfo"
            tools:text="CCH, Congressplatz 1, 20355 Hamburg" />

        <TextView
            android:id="@+id/about_conference_url_view"
            style="@style/AboutSection.EventInfo"
            tools:text="https://events.ccc.de/congress/2016" />

        <TextView
            android:id="@+id/about_session_version_view"
            style="@style/AboutSection.EventInfo"
            tools:text="Fahrplan BAD NETWORK/FIREWALL" />

        <TextView
            android:id="@+id/about_app_version_view"
            style="@style/AboutSection.EventInfo"
            tools:text="App Version 1.33.13" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_usage_note_view"
            style="@style/AboutSection.Text"
            android:text="@string/usage" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_app_disclaimer_view"
            style="@style/AboutSection.Text"
            android:text="@string/app_disclaimer" />

        <include
            android:id="@+id/about_app_disclaimer_line_view"
            layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_copyright_logo_view"
            style="@style/AboutSection.Text"
            tools:text="@string/copyright_logo" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_translation_platform_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_translation_platform" />

        <TextView
            android:id="@+id/about_source_code_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_source_code" />

        <TextView
            android:id="@+id/about_issues_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_issues_or_feature_requests" />

        <TextView
            android:id="@+id/about_f_droid_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_f_droid_listing" />

        <TextView
            android:id="@+id/about_google_play_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_google_play_listing" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_libraries_view"
            style="@style/AboutSection.Text"
            tools:text="@string/about_libraries_statement" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/about_data_privacy_statement_view"
            style="@style/AboutSection.Text"
            android:text="@string/about_data_privacy_statement_german" />

        <include layout="@layout/horizontal_line" />

        <TextView
            style="@style/AboutSection.Text"
            android:text="@string/copyright_notes" />

        <include layout="@layout/horizontal_line" />

        <TextView
            android:id="@+id/build_time"
            style="@style/AboutSection.Text"
            android:text="@string/build_info_time" />

        <TextView
            android:id="@+id/build_version_code"
            style="@style/AboutSection.Text"
            android:text="@string/build_info_version_code" />

        <TextView
            android:id="@+id/build_hash"
            style="@style/AboutSection.Text"
            android:text="@string/build_info_hash" />

    </LinearLayout>

</ScrollView>
